# ada-pastebin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.toml.sample  fly.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml  postcreate.sh
.github/: copilot-instructions.md
.github/workflows/: backup.yml  fly-deploy.yml  rust.yml
.sqlx/: query-00169260132f9e859bb5f8ffc9a6981cdec969dfc0774d138c6e12ddb3f11b10.json  query-1b6249ce233cf42341cadd4311963c54b2b765ed47276b5676bb05a916049a31.json  query-1ccc2313bf61bbeca3f13175aba3bc13041e1f8bd6e1547db5b226142d0af7d3.json  query-1dcc7915bc8b79a217b5c5616c1aaaf9088ec0fa6fc607817e60c8b3d8349a81.json  query-1f1c1d00983bf87702bd3beb13057a1f157ccb3d848ce3cec5c26503f4349d40.json  query-22261665ee5966e6302d03fc78ebd8af6bc0e2d96ce36848c2474e44d489667a.json  query-27ee823d99a168a8b154ce5e258e372f613533c9bd57f4eecca042c3b68782ad.json  query-3d952a6ee78376228b4f8138f34d2de2510aec7a2f73d3a74150b5bf5d5237c9.json  query-65775b97634028373f275d57ec8170093f61e466889bb8707150d54f67da981c.json  query-6deed32c76ca7531ea87c3b3de827d3a68cd17f18fab067e15326207fd92594c.json  query-757e57fd416cc01007e7240e58aacf416c41d7323d382fd541bd7ce1bd17eb2a.json  query-920fdafbe628dd8ab8a5e2471d9fae717823ce6ded6ff51bae0b08c62ad0468f.json  query-943e433634b74c9cc8f3cfda2c34b6c0ef34d1888dec5a472f39e9e9ecfdeeba.json  query-9b444ff1805cf220e96cb372218c2e740460da573962bf0fc250eb8128b45479.json  query-9d99c7e73c76300b288aaecc5edc91c47106246e62e650f012523d66bb0ef03c.json  query-b29ed2d6942754f7067eefe2e686d0e117a5f67ebc2317dbac62274486dc2ff6.json  query-c5e1cce2ea98c7ba18f76a86f7ddc73283ba8db99ab505ef9e56064910a1dd3a.json  query-dd638144a7f503aca7c1c3de33ec7f88abea1e76d6f39607030ecc2ecf2bc0fb.json  query-de7f5b2f984a537d00113585708ac2d86a1bc762a7681861c6033ca47a83c6ac.json  query-e3df84c298669559590e16b9b6b4a7a7c542d4ad18e004c588ff4c0f33e8957f.json  query-e991c85710165861481ecd57f879a0e79688f935583c7429460c54d560e89448.json  query-f0ca1518fc01fedea5610475f4dfdfc54cdcf48098dc1114504e2a56317f7843.json  query-f63aeda02693fed1c5b48c5f48d70ded0c9044d29c711e515abf69eec3679545.json  query-f78c658b965403c6c729cdf1c46de1b6b1a4ee4f2f232eaf4faec4df003a5ff0.json  query-f9e5d05eebfcbfd6794a313729cc4d66e30dd39999ae3eb3a51aa44c8d2e980f.json
confs/: postgres-setup.sql
confs/nginx/: 01-ada-young.conf  02-korb.conf
confs/s3/: bucket-policy.json  key-policy.json
confs/systemd/: ada-pastebin.service
migrations/: 20241122200000_pastebin.sql  20241222000000_sessions.sql  20241225000000_fix-indexes.sql  20241228000000_api-tokens.sql  20251230040151_more_indexes.sql  20260101134654_hash_user_ids.sql  20260110174324_tag_cloud.sql
src/: api.rs  cloudflare.rs  config.rs  discord.rs  errors.rs  forms.rs  gdrive.rs  main.rs  oauth.rs  paste.rs  recaptcha.rs  runtime.rs  s3.rs  session.rs  static_files.rs  templates.rs  utils.rs
static/css/: bootstrap.min.css.zst  cookieconsent.min.css.zst  pastebin.css
static/font/: bootstrap-icons.min.css.zst
static/js/: base.js  bootstrap.bundle.min.js.zst  common.js  cookieconsent.min.js.zst  paste.js  pastebin.js  search.js
templates/: 404.html  about.html.j2  analytics.html  api-about.html.j2  base.html  base.html.j2  gdrive.html.j2  paste.html.j2  pastebin.html.j2  search.html.j2
