[package]
name = "ada-pastebin"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3  # Optimize for speed
lto = true     # Enable Link Time Optimization
strip = "symbols"  # Strip debug symbols
codegen-units = 1

[dependencies]
askama = { version = "0.15.1" }
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.11"
aws-sdk-s3 = "1.119.0"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
axum_csrf = { version = "0.11.0", features = ["layer"] }
bigdecimal = "0.4.10"
brotli = "7.0.0"
chrono = { version = "0.4.42", default-features = false, features = ["now", "serde"] }
config = "0.14.1"
hex = "0.4.3"
mime_guess = "2.0.5"
num-traits = "0.2.19"
oauth2 = "4.4.2"
rand = "0.8.5"
reqwest = { version = "0.12.28", features = ["charset", "http2", "json", "rustls-tls", "stream"], default-features = false }
rust-embed = "8.9.0"
scc = "3.4.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "bigdecimal", "chrono"] }
time = "0.3.44"
tokio = { version = "1.49.0", features = ["full"] }
tower-cookies = { version = "0.11.0", features = ["private"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
